[package]
name = "box-drawing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw_tty = "0.1.0"
nom = { version="6", default-features=false }
itertools = { version = "0.10", default-features=false }